--- a/src/index.pug
+++ b/src/index.pug
@@ -44,11 +44,11 @@ html
           shadow="receive: true"
         )
         a-asset-item#glb(src=glb)
-        img#gmail(src="assets/img/contact/mail.png")
-        img#instagram(src="assets/img/contact/instagram.png")
-        img#twitter(src="assets/img/contact/twitter.png")
-        img#github(src="assets/img/contact/github.png")
-        img#facebook(src="assets/img/contact/facebook.png")
+        img#gmail(src="img/contact/mail.png")
+        img#instagram(src="img/contact/instagram.png")
+        img#twitter(src="img/contact/twitter.png")
+        img#github(src="img/contact/github.png")
+        img#facebook(src="img/contact/facebook.png")
 
       a-marker(
         markerhandler,
