--- a/src/index.pug
+++ b/src/index.pug
@@ -1,12 +1,13 @@
 -
-  var txt = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.';
-  var glb = "assets/3d/stanford_bunny.glb"
-  var glb_link = "href: https://github.com/5ebec/arcard-template"
-  var facebook_link = "href: https://www.facebook.com/"
+  var name = "heyhoe"
+  var desc = "I'm a senior of Undergraduate School of Electrical & Electronic Engineering in Faculty of Engineering, Kyoto University. I study Computer Vision & Machine Learning."
+  var glb = "assets/3d/shyguy.glb"
+  var glb_link = "href: https://a5e.be/c"
+  var facebook_link = "href: https://www.facebook.com/5ebec"
   var mail_link = "href: https://mail.google.com/"
-  var twitter_link = "href: https://twitter.com/"
-  var github_link = "href: https://github.com/"
-  var instagram_link = "href: https://instagram.com/"
+  var twitter_link = "href: https://twitter.com/5ebec"
+  var github_link = "href: https://github.com/5ebec"
+  var instagram_link = "href: https://instagram.com/5ebec"
 
 doctype html
 html
@@ -17,7 +18,7 @@ html
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     )
     meta(name="apple-mobile-web-app-capable", content="yes")
-    title ARCard Template
+    title 5ebec's ARCard
     //- A-Frame
     script(src="https://aframe.io/releases/0.9.2/aframe.min.js")
     //- AR.js
@@ -56,45 +57,51 @@ html
         cursor="fuse: false; rayOrigin: mouse",
         preset="custom",
         type="pattern",
-        url="assets/marker/pattern-qrcode.patt"
+        url="assets/marker/pattern-marker.patt"
       )
+        //- 3d model
         a-entity(
           gltf-model="#glb",
-          scale="1 1 1",
-          rotation="0 0 0",
+          scale="0.1 0.1 0.1",
+          rotation="-20 0 0",
           link=glb_link,
           animation-mixer
         )
+
+        //- name
         a-text(
           mixin="text",
-          value="bunny",
+          value=name,
           color="#a5ebec",
           align="center",
           width="4.5",
-          position="0.0 0.1 0.4"
+          position="0.0 0.1 0.35"
         )
         a-text(
           mixin="shadow",
-          value="bunny",
+          value=name,
           align="center",
           width="4.5",
-          position="0.01 0.0 0.41"
+          position="0.01 0.0 0.36"
         )
+
+        //- description
         a-text(
           mixin="text",
-          value=txt,
+          value=desc,
           width="2.5",
           wrap-count="43",
           position="0.0 0.05 0.9"
         )
         a-text(
           mixin="shadow",
-          value=txt,
+          value=desc,
           width="2.5",
           wrap-count="43",
           position="0.01 0.0 0.91"
         )
 
+        //- social links
         a-entity(
           rotation="0 0 0",
           animation="property: rotation; to: 0 360 0; loop: true; dur: 25000; easing: linear"
@@ -179,4 +186,7 @@ html
               vertex-c="10.809 0 -15.871",
               opacity="0"
             )
+      //- ambient light
+      a-entity(light="type: ambient; intensity: 2;")
+      //- AR camera
       a-entity(camera)
