--- a/src/index.pug
+++ b/src/index.pug
@@ -20,16 +20,16 @@ html
     meta(name="apple-mobile-web-app-capable", content="yes")
     title 5ebec's ARCard
     //- A-Frame
-    script(src="https://aframe.io/releases/0.9.2/aframe.min.js")
+    script(src="https://aframe.io/releases/1.2.0/aframe.min.js")
     //- AR.js
     script(
-      src="https://raw.githack.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"
+      src="https://raw.githack.com/AR-js-org/AR.js/3.3.1/aframe/build/aframe-ar.js"
     )
 
   body(style="margin: 0px; overflow: hidden")
     a-scene(
       embedded,
-      arjs="debugUIEnabled:false;",
+      arjs="debugUIEnabled: false",
       vr-mode-ui="enabled: false"
     )
       a-assets
