--- a/src/index.pug
+++ b/src/index.pug
@@ -21,6 +21,9 @@ html
     title 5ebec's ARCard
     //- A-Frame
     script(src="https://aframe.io/releases/1.2.0/aframe.min.js")
+    script(
+      src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"
+    )
     //- AR.js
     script(
       src="https://raw.githack.com/AR-js-org/AR.js/3.3.1/aframe/build/aframe-ar.js"
